# Content-auditor

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  main.py  prd.md  pyproject.toml  sample_urls.csv
chains/: __init__.py  tone_chain.py
rules/: __init__.py  a11y_rules.py  seo_rules.py
tests/: __init__.py  test_integration.py  test_rules.py
utils/: __init__.py  budget.py  cache.py  html_fetch.py  html_to_text.py
